--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
                     </div>
                 </form>
                 
+                <!-- [DITAMBAHKAN] Tombol untuk tautan update -->
+                <div class="form-group" style="margin-top: 10px; text-align: center;">
+                    <a href="http://lynk.id/pdPak Ade Kurniawan/d74pdwkgrwww" class="btn btn-secondary btn-block" target="_blank" rel="noopener noreferrer">
+                        Cek Versi Terbaru
+                    </a>
+                </div>
+                
                 <div id="statusMessage" class="status-message" style="display: none; margin-top: 15px;"></div>
             </div>
         </div>
